--- a/spring-cloud-samples/02samples-gateway-nacos/pom.xml
+++ b/spring-cloud-samples/02samples-gateway-nacos/pom.xml
@@ -15,6 +15,13 @@
 			<groupId>com.learning</groupId>
 			<artifactId>01samples-common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+			<exclusions>
+				<!-- 因为网关使用的是spring-webflux 而不是spring-mvc -->
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-web</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
@@ -26,10 +33,26 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-alibaba-nacos-discovery</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-alibaba-nacos-config</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.sanjusoftware</groupId>
+			<artifactId>yamlbeans</artifactId>
+			<version>1.11</version>
 		</dependency>
 	</dependencies>
 </project>
