--- a/spring-cloud-samples/02samples-gateway-nacos/src/main/resources/bootstrap.yml
+++ b/spring-cloud-samples/02samples-gateway-nacos/src/main/resources/bootstrap.yml
@@ -2,9 +2,12 @@ hystrix:
   command:
     default:
       execution:
+        timeout: 
+          enable: true
         isolation:
           thread:
-            timeoutInMilliseconds: 3000
+            timeoutInMilliseconds: 30000000
+            
 spring:
   application:
     name: 02samples-gateway-nacos
@@ -18,14 +21,16 @@ spring:
           
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
-        namespace: 4930f0b0-2af5-478d-8940-9418866a194f #所属命名空间
+        server-addr: 172.168.9.82:8848
+#        server-addr: 127.0.0.1:8848
+#        namespace: 4930f0b0-2af5-478d-8940-9418866a194f #所属命名空间
       config:
-        gateway-data-id: ${spring.application.name}-route.yaml #自定义属性【路由配置】
-        shared-dataids: ${spring.cloud.nacos.config.gateway-data-id}
-        refreshable-dataids: ${spring.cloud.nacos.config.gateway-data-id}
-        server-addr: 127.0.0.1:8848
+#        gateway-data-id: ${spring.application.name}-route.yaml #自定义属性【路由配置】
+#        shared-dataids: ${spring.cloud.nacos.config.gateway-data-id}
+#        refreshable-dataids: ${spring.cloud.nacos.config.gateway-data-id}
+#        server-addr: 127.0.0.1:8848
+        server-addr: 172.168.9.82:8848
         group: SAMPLES_GROUP #所属分组
-        namespace: 4930f0b0-2af5-478d-8940-9418866a194f  #所属命名空间
+#        namespace: 4930f0b0-2af5-478d-8940-9418866a194f  #所属命名空间
         file-extension: yaml
 
