--- a/spring-cloud-samples/05samples-discovery-nacos-provider-without-security/src/main/resources/bootstrap.yml
+++ b/spring-cloud-samples/05samples-discovery-nacos-provider-without-security/src/main/resources/bootstrap.yml
@@ -4,11 +4,11 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
-        namespace: 4930f0b0-2af5-478d-8940-9418866a194f #所属命名空间
+        server-addr: 172.168.9.82:8848
+#        namespace: 4930f0b0-2af5-478d-8940-9418866a194f #所属命名空间
       config:
-        server-addr: 127.0.0.1:8848
+        server-addr: 172.168.9.82:8848
         file-extension: yaml
         group: SAMPLES_GROUP # 对 shared-dataids无效
-        namespace: 4930f0b0-2af5-478d-8940-9418866a194f #所属命名空间
+#        namespace: 4930f0b0-2af5-478d-8940-9418866a194f #所属命名空间
         shared-dataids: 01samples-common.yaml   #只能用默认的DEFAULT_GROUP
